@@ -1,31 +1,30 @@
 package com.dbms.mentalhealth.service.impl;
 
-import com.cloudinary.Cloudinary;
-import com.cloudinary.utils.ObjectUtils;
 import com.dbms.mentalhealth.dto.blog.request.BlogRequestDTO;
 import com.dbms.mentalhealth.dto.blog.response.BlogResponseDTO;
 import com.dbms.mentalhealth.dto.blog.response.BlogSummaryDTO;
-import com.dbms.mentalhealth.enums.ApprovalStatus;
+import com.dbms.mentalhealth.enums.BlogApprovalStatus;
 import com.dbms.mentalhealth.mapper.BlogMapper;
 import com.dbms.mentalhealth.model.Blog;
 import com.dbms.mentalhealth.model.BlogLike;
 import com.dbms.mentalhealth.repository.BlogLikeRepository;
 import com.dbms.mentalhealth.repository.BlogRepository;
 import com.dbms.mentalhealth.repository.UserRepository;
+import com.dbms.mentalhealth.security.jwt.JwtUtils;
 import com.dbms.mentalhealth.service.BlogService;
+import com.dbms.mentalhealth.service.ImageStorageService;
 import com.dbms.mentalhealth.service.UserService;
+import jakarta.servlet.http.HttpServletRequest;
 import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
+import org.springframework.web.context.request.RequestContextHolder;
+import org.springframework.web.context.request.ServletRequestAttributes;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class BlogServiceImpl implements BlogService {
@@ -34,43 +33,43 @@ public class BlogServiceImpl implements BlogService {
     private final BlogRepository blogRepository;
     private final BlogLikeRepository blogLikeRepository;
     private final UserService userService;
-    private final Cloudinary cloudinary;
-//    private static final Logger logger = LoggerFactory.getLogger(BlogServiceImpl.class);
+    private final ImageStorageService imageStorageService;
+    private final JwtUtils jwtUtils;
+
     @Autowired
-    public BlogServiceImpl(UserRepository userRepository, BlogRepository blogRepository, BlogLikeRepository blogLikeRepository, UserServiceImpl userService, Cloudinary cloudinary) {
+    public BlogServiceImpl(UserRepository userRepository, ImageStorageService imageStorageService, BlogRepository blogRepository, BlogLikeRepository blogLikeRepository, UserServiceImpl userService, JwtUtils jwtUtils) {
         this.blogRepository = blogRepository;
         this.blogLikeRepository = blogLikeRepository;
         this.userService = userService;
-        this.cloudinary = cloudinary;
+        this.imageStorageService = imageStorageService;
         this.userRepository = userRepository;
+        this.jwtUtils = jwtUtils;
     }
 
     @Transactional
-    public BlogResponseDTO createBlog(BlogRequestDTO blogRequestDTO, MultipartFile image) {
+    public BlogResponseDTO createBlog(BlogRequestDTO blogRequestDTO, MultipartFile image) throws Exception {
         Blog blog = BlogMapper.toEntity(blogRequestDTO);
+        Integer userId = getUserIdFromContext();
+        blog.setUserId(userId);
+
         if (image != null && !image.isEmpty()) {
-            String imageUrl = saveImage(image);
+            String imageUrl = imageStorageService.uploadImage(image);
             blog.setImageUrl(imageUrl);
         }
-        if (blog.getApprovalStatus() == null) {
-            blog.setApprovalStatus(ApprovalStatus.PENDING);
+        if (blog.getBlogApprovalStatus() == null) {
+            blog.setBlogApprovalStatus(BlogApprovalStatus.PENDING);
         }
         Blog createdBlog = blogRepository.save(blog);
-        return BlogMapper.toResponseDTO(createdBlog,false);
+        return BlogMapper.toResponseDTO(createdBlog, false);
     }
 
-
     public Optional<BlogResponseDTO> getBlogById(Integer blogId) {
-        String username = getUsernameFromContext();
-        Integer userId = userService.getUserIdByUsername(username);
-        if (userId == null) {
-            return Optional.empty();
-        }
+        Integer userId = getUserIdFromContext();
         boolean isAdmin = userService.isAdmin(userId);
 
         return blogRepository.findById(blogId)
                 .map(blog -> {
-                    if (blog.getApprovalStatus() == ApprovalStatus.APPROVED || isAdmin) {
+                    if (blog.getBlogApprovalStatus() == BlogApprovalStatus.APPROVED || isAdmin) {
                         blog.setViewCount(blog.getViewCount() + 1);
                         blogRepository.save(blog);
                         boolean likedByCurrentUser = blogLikeRepository.existsByBlogIdAndUserUserId(blogId, userId);
@@ -80,87 +79,51 @@ public class BlogServiceImpl implements BlogService {
                 });
     }
 
-
-
     @Transactional
-    public BlogResponseDTO updateBlog(Integer blogId, BlogRequestDTO blogRequestDTO, MultipartFile image) {
+    public BlogResponseDTO updateBlog(Integer blogId, BlogRequestDTO blogRequestDTO, MultipartFile image) throws Exception {
         Blog blog = blogRepository.findById(blogId).orElseThrow(() -> new RuntimeException("Blog not found"));
 
         if (!isCurrentUserPublisher(blog.getUserId())) {
             throw new RuntimeException("You are not authorized to edit this blog");
         }
         if (image != null && !image.isEmpty()) {
-            deleteImageFromCloudinary(blog.getImageUrl());
-            String imageUrl = saveImage(image);
+            imageStorageService.deleteImage(blog.getImageUrl());
+            String imageUrl = imageStorageService.uploadImage(image);
             blog.setImageUrl(imageUrl);
         }
         blog.setTitle(blogRequestDTO.getTitle());
         blog.setContent(blogRequestDTO.getContent());
         blog.setSummary(blogRequestDTO.getSummary());
-        blog.setApprovalStatus(ApprovalStatus.PENDING);
+        blog.setBlogApprovalStatus(BlogApprovalStatus.PENDING);
         Blog updatedBlog = blogRepository.save(blog);
-        boolean likedByCurrentUser = blogLikeRepository.existsByBlogIdAndUserUserId(blogId, userService.getUserIdByUsername(getUsernameFromContext()));
+        boolean likedByCurrentUser = blogLikeRepository.existsByBlogIdAndUserUserId(blogId, getUserIdFromContext());
         return BlogMapper.toResponseDTO(updatedBlog, likedByCurrentUser);
     }
 
-    private void deleteImageFromCloudinary(String imageUrl) {
-        try {
-            String publicId = extractPublicIdFromUrl(imageUrl);
-            cloudinary.uploader().destroy(publicId, ObjectUtils.emptyMap());
-        } catch (IOException e) {
-            throw new RuntimeException("Failed to delete image from Cloudinary", e);
-        }
-    }
-
-    private String extractPublicIdFromUrl(String imageUrl) {
-        String[] parts = imageUrl.split("/");
-        String publicIdWithExtension = parts[parts.length - 1];
-        return publicIdWithExtension.split("\\.")[0];
-    }
-
     @Transactional
-    public void deleteBlog(Integer blogId) {
+    public void deleteBlog(Integer blogId) throws Exception {
         Blog blog = blogRepository.findById(blogId).orElseThrow(() -> new RuntimeException("Blog not found"));
         if (blog.getImageUrl() != null) {
-            deleteImageFromCloudinary(blog.getImageUrl());
+            imageStorageService.deleteImage(blog.getImageUrl());
         }
         blogRepository.deleteById(blogId);
     }
 
-
     private boolean isCurrentUserPublisher(Integer blogUserId) {
-        String username = getUsernameFromContext();
-        Integer currentUserId = userService.getUserIdByUsername(username);
-        if (currentUserId == null) {
-            return false;
-        }
+        Integer currentUserId = getUserIdFromContext();
         return currentUserId.equals(blogUserId);
     }
 
-    private String saveImage(MultipartFile image) {
-        if (image == null || image.isEmpty()) {
-            throw new IllegalArgumentException("Image file must not be null or empty");
-        }
-        try {
-            Map<String, Object> uploadResult = cloudinary.uploader().upload(image.getBytes(), ObjectUtils.asMap(
-                    "format", "jpg"
-            ));
-            return uploadResult.get("url").toString();
-        } catch (IOException e) {
-            throw new RuntimeException("Failed to upload image to Cloudinary", e);
-        }
-    }
     public BlogResponseDTO updateBlogApprovalStatus(Integer blogId, boolean isApproved) {
         Blog blog = blogRepository.findById(blogId).orElseThrow(() -> new RuntimeException("Blog not found"));
-        blog.setApprovalStatus(isApproved ? ApprovalStatus.APPROVED : ApprovalStatus.REJECTED);
+        blog.setBlogApprovalStatus(isApproved ? BlogApprovalStatus.APPROVED : BlogApprovalStatus.REJECTED);
         Blog updatedBlog = blogRepository.save(blog);
-        boolean likedByCurrentUser = blogLikeRepository.existsByBlogIdAndUserUserId(blogId, userService.getUserIdByUsername(getUsernameFromContext()));
+        boolean likedByCurrentUser = blogLikeRepository.existsByBlogIdAndUserUserId(blogId, getUserIdFromContext());
         return BlogMapper.toResponseDTO(updatedBlog, likedByCurrentUser);
     }
 
     public BlogResponseDTO likeBlog(Integer blogId) {
-        String username = getUsernameFromContext();
-        Integer userId = userService.getUserIdByUsername(username);
+        Integer userId = getUserIdFromContext();
 
         Blog blog = blogRepository.findById(blogId).orElseThrow(() -> new RuntimeException("Blog not found"));
         if (blogLikeRepository.existsByBlogIdAndUserUserId(blogId, userId)) {
@@ -174,12 +137,11 @@ public class BlogServiceImpl implements BlogService {
         blogLikeRepository.save(blogLike);
         blogRepository.save(blog);
 
-        return BlogMapper.toResponseDTO(blog,true);
+        return BlogMapper.toResponseDTO(blog, true);
     }
 
     public BlogResponseDTO unlikeBlog(Integer blogId) {
-        String username = getUsernameFromContext();
-        Integer userId = userService.getUserIdByUsername(username);
+        Integer userId = getUserIdFromContext();
 
         Blog blog = blogRepository.findById(blogId).orElseThrow(() -> new RuntimeException("Blog not found"));
         BlogLike blogLike = blogLikeRepository.findByBlogIdAndUserUserId(blogId, userId).orElseThrow(() -> new RuntimeException("Like not found"));
@@ -189,21 +151,12 @@ public class BlogServiceImpl implements BlogService {
         blog.setLikeCount(blog.getLikeCount() - 1);
         blogRepository.save(blog);
 
-        return BlogMapper.toResponseDTO(blog,false);    }
-
-    private String getUsernameFromContext() {
-        Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        return (principal instanceof UserDetails) ? ((UserDetails) principal).getUsername() : principal.toString();
+        return BlogMapper.toResponseDTO(blog, false);
     }
-
 
     @Transactional
     public List<BlogSummaryDTO> getBlogsByUser(Integer userId) {
-        String username = getUsernameFromContext();
-        Integer currentUserId = userService.getUserIdByUsername(username);
-        if (currentUserId == null) {
-            throw new RuntimeException("User not found");
-        }
+        Integer currentUserId = getUserIdFromContext();
         boolean isAdmin = userService.isAdmin(currentUserId);
         if (isAdmin) {
             return blogRepository.findByUserId(userId)
@@ -212,23 +165,22 @@ public class BlogServiceImpl implements BlogService {
                         boolean likedByCurrentUser = blogLikeRepository.existsByBlogIdAndUserUserId(blog.getId(), currentUserId);
                         return BlogMapper.toSummaryDTO(blog, likedByCurrentUser);
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
-            return blogRepository.findByUserIdAndApprovalStatus(userId, ApprovalStatus.APPROVED)
+            return blogRepository.findByUserIdAndBlogApprovalStatus(userId, BlogApprovalStatus.APPROVED)
                     .stream()
                     .map(blog -> {
                         boolean likedByCurrentUser = blogLikeRepository.existsByBlogIdAndUserUserId(blog.getId(), currentUserId);
                         return BlogMapper.toSummaryDTO(blog, likedByCurrentUser);
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
     @Transactional
     public List<BlogSummaryDTO> searchBlogsByPartialTitle(String title) {
         String normalizedTitle = title.trim().toLowerCase();
-        String username = getUsernameFromContext();
-        Integer userId = userService.getUserIdByUsername(username);
+        Integer userId = getUserIdFromContext();
 
         return blogRepository.findByTitleContainingIgnoreCase(normalizedTitle)
                 .stream()
@@ -236,43 +188,44 @@ public class BlogServiceImpl implements BlogService {
                     boolean likedByCurrentUser = blogLikeRepository.existsByBlogIdAndUserUserId(blog.getId(), userId);
                     return BlogMapper.toSummaryDTO(blog, likedByCurrentUser);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public List<BlogSummaryDTO> getBlogsByApprovalStatus(String status) {
-        String username = getUsernameFromContext();
-        Integer userId = userService.getUserIdByUsername(username);
-        if (userId == null) {
-            throw new RuntimeException("User not found");
-        }
+        Integer userId = getUserIdFromContext();
         boolean isAdmin = userService.isAdmin(userId);
 
         if (!isAdmin && !status.equalsIgnoreCase("approved")) {
             throw new IllegalArgumentException("Only approved blogs can be retrieved by non-admin users");
         }
 
-        ApprovalStatus approvalStatus;
+        BlogApprovalStatus blogApprovalStatus;
         switch (status.toLowerCase()) {
             case "approved":
-                approvalStatus = ApprovalStatus.APPROVED;
+                blogApprovalStatus = BlogApprovalStatus.APPROVED;
                 break;
             case "pending":
-                approvalStatus = ApprovalStatus.PENDING;
+                blogApprovalStatus = BlogApprovalStatus.PENDING;
                 break;
             case "rejected":
-                approvalStatus = ApprovalStatus.REJECTED;
+                blogApprovalStatus = BlogApprovalStatus.REJECTED;
                 break;
             default:
                 throw new IllegalArgumentException("Invalid status: " + status);
         }
-        List<Blog> blogs = blogRepository.findAllByApprovalStatus(approvalStatus);
+        List<Blog> blogs = blogRepository.findAllByBlogApprovalStatus(blogApprovalStatus);
         return blogs.stream()
                 .map(blog -> {
                     boolean likedByCurrentUser = blogLikeRepository.existsByBlogIdAndUserUserId(blog.getId(), userId);
                     return BlogMapper.toSummaryDTO(blog, likedByCurrentUser);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    private Integer getUserIdFromContext() {
+        HttpServletRequest request = ((ServletRequestAttributes) RequestContextHolder.getRequestAttributes()).getRequest();
+        String jwt = jwtUtils.getJwtFromHeader(request);
+        return jwtUtils.getUserIdFromJwtToken(jwt);
+    }
 }
